@@ -1,3 +1,15 @@
+2012-10-30  Gabor Rapcsanyi  <rgabor@webkit.org>
+
+        Optimize vclip for NEON in VectorMath
+        https://bugs.webkit.org/show_bug.cgi?id=100737
+
+        Reviewed by Zoltan Herczeg.
+
+        Speed up vclip in VectorMath with NEON intrinsics.
+
+        * platform/audio/VectorMath.cpp:
+        (WebCore::VectorMath::vclip):
+
 2012-10-30  Alexandru Chiculita  <achicu@adobe.com>
 
         [CSS Shaders] Software and composited filters should have a common path
